Created a valid company dictionary and converted it to a csv

--- a/src/ianDataProfiling.ipynb
+++ b/src/ianDataProfiling.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -176,14 +176,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['JRESST', 'DLIONS', 'BKHLBN', 'ALCAZJJ', 'LNDBCS', 'USSANF', 'SWBULC', 'CELULA', 'MAGKUL', 'SOWIPO']\n",
+      "['CNADN', 'JOHCON', 'SVNZDR', 'NOLSK', 'HXMORS', 'MEDYTI', 'TQMISG', 'VPRRSC', 'QUDC', 'CCOOLE']\n",
       "There are 73688 unique company codes\n"
      ]
     }
@@ -1307,40 +1307,177 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "<h3><b>Creating a valid company code dictionary</b></h3>"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "invalid_company_codes = invalid_df.code.tolist()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "code_dict.rename(columns = {' description': 'description'}, inplace = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "valid_companies = pd.DataFrame()\n",
+    "valid_codes = np.array([])\n",
+    "valid_desc = np.array([])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for row in code_dict.itertuples():\n",
+    "    if row.code in unique_company_codes:\n",
+    "        valid_codes = np.append(valid_codes, row.code)\n",
+    "        valid_desc = np.append(valid_desc, row.description)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "valid_companies['Code'] = valid_codes\n",
+    "valid_companies['Description'] = valid_desc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "valid_companies.drop_duplicates(inplace = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "valid_companies.to_csv(\"../data/working/validcompaniesdictionary.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_valid_df = pd.read_csv(\"../data/working/validcompaniesdictionary.csv\", index_col = [0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.0\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Code</th>\n",
+       "      <th>Description</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>AA</td>\n",
+       "      <td>AA PLC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>AAAADJ</td>\n",
+       "      <td>Emperial Americas, Inc.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>AAAAIY</td>\n",
+       "      <td>American Academy of Allergy, Asthma and Immuno...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>AAABBB</td>\n",
+       "      <td>Bird Studies Canada</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>AAACK</td>\n",
+       "      <td>Aesculap AG &amp; Co. KG</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Code                                        Description\n",
+       "0      AA                                             AA PLC\n",
+       "2  AAAADJ                            Emperial Americas, Inc.\n",
+       "3  AAAAIY  American Academy of Allergy, Asthma and Immuno...\n",
+       "5  AAABBB                                Bird Studies Canada\n",
+       "6   AAACK                               Aesculap AG & Co. KG"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "my_valid_df.head()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Got a csv of invalid company codes (no description because they are not in the code dictionary so I dont know which companies the codes refer to)\n",
+    "#Got a csv for the valid company dictionary (code and description of all companies in the dataset that are valid)"
+   ]
   }
  ],
  "metadata": {
