Added a conclusion cell

--- a/src/ianDataProfiling.ipynb
+++ b/src/ianDataProfiling.ipynb
@@ -26,6 +26,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<h1><b>Data Profiling</b></h1>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<h2><b>Validity Check for Company-Related Columns</b></h2>"
    ]
   },
@@ -530,23 +537,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "There are 9683 company codes in the company codes column that are not in the dictionary\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"There are {} company codes in the company codes column that are not in the dictionary\".format(len(invalid_company_codes)))"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -714,22 +704,6 @@
    "source": [
     "#First 100 invalid rows\n",
     "print(invalid_row[0:100])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "invalid_df = pd.DataFrame()\n",
-    "\n",
-    "invalid_df['Row'] = invalid_row\n",
-    "invalid_co = np.array([])\n",
-    "\n",
-    "for row in df.itertuples():\n",
-    "    if row.Row in invalid_row:\n",
-    "        invalid_co = np.append(invalid_co, row.company_codes)"
    ]
   },
   {
@@ -1160,153 +1134,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>code</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>JRESST</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>ALCAZJJ</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>AGKQTTQ</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>GCHDLO</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>CBIINS</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>DDAKTXS</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>BZJNJFQ</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>ACDVOSV</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>MEVAGI</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>IAQHKB</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>BYUUMVJ</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>AIMKNQK</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>AITZLZT</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>ABIKGMC</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>IRONCC</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>BYSFXOB</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>RDIECI</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>TECCOD</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>SNUTRI</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>HUAIGL</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       code\n",
-       "0    JRESST\n",
-       "1   ALCAZJJ\n",
-       "2   AGKQTTQ\n",
-       "3    GCHDLO\n",
-       "4    CBIINS\n",
-       "5   DDAKTXS\n",
-       "6   BZJNJFQ\n",
-       "7   ACDVOSV\n",
-       "8    MEVAGI\n",
-       "9    IAQHKB\n",
-       "10  BYUUMVJ\n",
-       "11  AIMKNQK\n",
-       "12  AITZLZT\n",
-       "13  ABIKGMC\n",
-       "14   IRONCC\n",
-       "15  BYSFXOB\n",
-       "16   RDIECI\n",
-       "17   TECCOD\n",
-       "18   SNUTRI\n",
-       "19   HUAIGL"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "invalid_df.head(20)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1470,14 +1297,348 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h1><b>Conclusions</b></h1>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h4>Validity: Defined here as codes that are not in the data dictionary</h4>\n",
+    "<p>Looking at the validity of the company columns</p>\n",
+    "<ol>\n",
+    "    <li>Company_codes had just under 87% valid codes in its column. That means that of all the unique codes in this\n",
+    "        column, 13% or so were not in the data dictionary</li>\n",
+    "    <li>Company_codes_occur was 89% valid for all unique codes in its column</li>\n",
+    "    <li>Both company_codes_about and company_codes_lineage were 99% valid</li>\n",
+    "    <li>Company_codes_relevance was 86% valid</li>\n",
+    "</ol>\n",
+    "\n",
+    "<p>There were 73,688 unique company codes in this dataset. Of those 73,688, 9683 were considered invalid since they did not appear in the data dictionary. This left 64,005 valid companies. Each company's code and name are provided in the validcompaniesdictionary.csv. A list of the invalid company codes are also available in the invalidcompanycodes.csv</p>\n",
+    "\n",
+    "<p>There were 161,321 rows in the DNA dataset that had at least one invalid company code in its company_codes column</p>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h4>Completeness, Uniqueness, and Duplicates</h4>\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 211,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Completeness</th>\n",
+       "      <th>Uniqueness</th>\n",
+       "      <th>Duplicates</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>copyright</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>7.014934e-03</td>\n",
+       "      <td>0.992985</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>subject_codes</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.732466e-01</td>\n",
+       "      <td>0.826753</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>art</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.040685e-02</td>\n",
+       "      <td>0.989593</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>modification_datetime</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>6.468182e-01</td>\n",
+       "      <td>0.353182</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>body</th>\n",
+       "      <td>0.975772</td>\n",
+       "      <td>8.207384e-01</td>\n",
+       "      <td>0.199146</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>company_codes_occur</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.813707e-01</td>\n",
+       "      <td>0.818629</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>company_codes_about</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>9.813290e-02</td>\n",
+       "      <td>0.901867</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>company_codes_lineage</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>4.418755e-03</td>\n",
+       "      <td>0.995581</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>snippet</th>\n",
+       "      <td>0.988084</td>\n",
+       "      <td>9.037721e-01</td>\n",
+       "      <td>0.106997</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>publication_date</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>2.116277e-01</td>\n",
+       "      <td>0.788372</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>market_index_codes</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>6.304125e-03</td>\n",
+       "      <td>0.993696</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>credit</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>9.578687e-04</td>\n",
+       "      <td>0.999042</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>currency_codes</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.358825e-04</td>\n",
+       "      <td>0.999864</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>region_of_origin</th>\n",
+       "      <td>0.999788</td>\n",
+       "      <td>1.029631e-04</td>\n",
+       "      <td>0.999897</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ingestion_datetime</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>6.295663e-01</td>\n",
+       "      <td>0.370434</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>modification_date</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>8.869020e-01</td>\n",
+       "      <td>0.113098</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>source_name</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>2.196767e-03</td>\n",
+       "      <td>0.997803</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>language_code</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>5.147065e-07</td>\n",
+       "      <td>0.999999</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>region_codes</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>2.923275e-02</td>\n",
+       "      <td>0.970767</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>company_codes_association</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>5.147065e-07</td>\n",
+       "      <td>0.999999</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>person_codes</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>8.579899e-02</td>\n",
+       "      <td>0.914201</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>byline</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>3.056430e-02</td>\n",
+       "      <td>0.969436</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>company_codes_relevance</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>2.585252e-01</td>\n",
+       "      <td>0.741475</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>source_code</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>2.105149e-03</td>\n",
+       "      <td>0.997895</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>an</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000e+00</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>word_count</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>7.242949e-03</td>\n",
+       "      <td>0.992757</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>company_codes</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>3.621789e-01</td>\n",
+       "      <td>0.637821</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>industry_codes</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>6.867213e-02</td>\n",
+       "      <td>0.931328</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>title</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>7.835670e-01</td>\n",
+       "      <td>0.216433</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>publication_datetime</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>2.116277e-01</td>\n",
+       "      <td>0.788372</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>publisher_name</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>7.339714e-04</td>\n",
+       "      <td>0.999266</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>action</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.029413e-06</td>\n",
+       "      <td>0.999999</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>document_type</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>5.147065e-07</td>\n",
+       "      <td>0.999999</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>section</th>\n",
+       "      <td>0.448260</td>\n",
+       "      <td>6.175186e-03</td>\n",
+       "      <td>0.997231</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>dateline</th>\n",
+       "      <td>0.013851</td>\n",
+       "      <td>1.921519e-01</td>\n",
+       "      <td>0.997338</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                           Completeness    Uniqueness  Duplicates\n",
+       "copyright                      1.000000  7.014934e-03    0.992985\n",
+       "subject_codes                  1.000000  1.732466e-01    0.826753\n",
+       "art                            1.000000  1.040685e-02    0.989593\n",
+       "modification_datetime          1.000000  6.468182e-01    0.353182\n",
+       "body                           0.975772  8.207384e-01    0.199146\n",
+       "company_codes_occur            1.000000  1.813707e-01    0.818629\n",
+       "company_codes_about            1.000000  9.813290e-02    0.901867\n",
+       "company_codes_lineage          1.000000  4.418755e-03    0.995581\n",
+       "snippet                        0.988084  9.037721e-01    0.106997\n",
+       "publication_date               1.000000  2.116277e-01    0.788372\n",
+       "market_index_codes             1.000000  6.304125e-03    0.993696\n",
+       "credit                         1.000000  9.578687e-04    0.999042\n",
+       "currency_codes                 1.000000  1.358825e-04    0.999864\n",
+       "region_of_origin               0.999788  1.029631e-04    0.999897\n",
+       "ingestion_datetime             1.000000  6.295663e-01    0.370434\n",
+       "modification_date              1.000000  8.869020e-01    0.113098\n",
+       "source_name                    1.000000  2.196767e-03    0.997803\n",
+       "language_code                  1.000000  5.147065e-07    0.999999\n",
+       "region_codes                   1.000000  2.923275e-02    0.970767\n",
+       "company_codes_association      1.000000  5.147065e-07    0.999999\n",
+       "person_codes                   1.000000  8.579899e-02    0.914201\n",
+       "byline                         1.000000  3.056430e-02    0.969436\n",
+       "company_codes_relevance        1.000000  2.585252e-01    0.741475\n",
+       "source_code                    1.000000  2.105149e-03    0.997895\n",
+       "an                             1.000000  1.000000e+00    0.000000\n",
+       "word_count                     1.000000  7.242949e-03    0.992757\n",
+       "company_codes                  1.000000  3.621789e-01    0.637821\n",
+       "industry_codes                 1.000000  6.867213e-02    0.931328\n",
+       "title                          1.000000  7.835670e-01    0.216433\n",
+       "publication_datetime           1.000000  2.116277e-01    0.788372\n",
+       "publisher_name                 1.000000  7.339714e-04    0.999266\n",
+       "action                         1.000000  1.029413e-06    0.999999\n",
+       "document_type                  1.000000  5.147065e-07    0.999999\n",
+       "section                        0.448260  6.175186e-03    0.997231\n",
+       "dateline                       0.013851  1.921519e-01    0.997338"
+      ]
+     },
+     "execution_count": 211,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#Got a csv of invalid company codes (no description because they are not in the code dictionary so I dont know which companies the codes refer to)\n",
-    "#Got a csv for the valid company dictionary (code and description of all companies in the dataset that are valid)"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
