Deleted profile tables that were just placeholders

--- a/src/ianDataProfiling.ipynb
+++ b/src/ianDataProfiling.ipynb
@@ -82,77 +82,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 91,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Validity</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>company_codes</th>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>company_codes_occur</th>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>company_codes_about</th>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>company_codes_lineage</th>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>company_codes_relevance</th>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                         Validity\n",
-       "company_codes                 0.0\n",
-       "company_codes_occur           0.0\n",
-       "company_codes_about           0.0\n",
-       "company_codes_lineage         0.0\n",
-       "company_codes_relevance       0.0"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#For validating, I will be taking each unique company code in all of the columns and checking to see if each one is in the company codes dictionary\n",
     "#The dataframe below will keep track of the % of valid company codes\n",
-    "profile = pd.DataFrame({\"Validity\": np.zeros(len(companies.columns))}).set_index(companies.columns)\n",
-    "profile"
+    "profile = pd.DataFrame({\"Validity\": np.zeros(len(companies.columns))}).set_index(companies.columns)"
    ]
   },
   {
@@ -715,57 +651,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 90,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                           Completeness  Uniqueness  Duplicates\n",
-      "copyright                             0           0           0\n",
-      "subject_codes                         0           0           0\n",
-      "art                                   0           0           0\n",
-      "modification_datetime                 0           0           0\n",
-      "body                                  0           0           0\n",
-      "company_codes_occur                   0           0           0\n",
-      "company_codes_about                   0           0           0\n",
-      "company_codes_lineage                 0           0           0\n",
-      "snippet                               0           0           0\n",
-      "publication_date                      0           0           0\n",
-      "market_index_codes                    0           0           0\n",
-      "credit                                0           0           0\n",
-      "currency_codes                        0           0           0\n",
-      "region_of_origin                      0           0           0\n",
-      "ingestion_datetime                    0           0           0\n",
-      "modification_date                     0           0           0\n",
-      "source_name                           0           0           0\n",
-      "language_code                         0           0           0\n",
-      "region_codes                          0           0           0\n",
-      "company_codes_association             0           0           0\n",
-      "person_codes                          0           0           0\n",
-      "byline                                0           0           0\n",
-      "company_codes_relevance               0           0           0\n",
-      "source_code                           0           0           0\n",
-      "an                                    0           0           0\n",
-      "word_count                            0           0           0\n",
-      "company_codes                         0           0           0\n",
-      "industry_codes                        0           0           0\n",
-      "title                                 0           0           0\n",
-      "publication_datetime                  0           0           0\n",
-      "publisher_name                        0           0           0\n",
-      "action                                0           0           0\n",
-      "document_type                         0           0           0\n",
-      "section                               0           0           0\n",
-      "dateline                              0           0           0\n",
-      "Row                                   0           0           0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#create profiling dataframe\n",
-    "prof = pd.DataFrame({\"Completeness\": np.zeros(len(df.columns)).astype(int), \"Uniqueness\": np.zeros(len(df.columns)).astype(int),\"Duplicates\": np.zeros(len(df.columns)).astype(int)}).set_index(df.columns)\n",
-    "print(prof)"
+    "prof = pd.DataFrame({\"Completeness\": np.zeros(len(df.columns)).astype(int), \"Uniqueness\": np.zeros(len(df.columns)).astype(int),\"Duplicates\": np.zeros(len(df.columns)).astype(int)}).set_index(df.columns)"
    ]
   },
   {
