Added way to get unique companies for each row

--- a/src/ianDataProfiling.ipynb
+++ b/src/ianDataProfiling.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,14 +119,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['CNADN', 'JOHCON', 'SVNZDR', 'NOLSK', 'HXMORS', 'MEDYTI', 'TQMISG', 'VPRRSC', 'QUDC', 'CCOOLE']\n",
+      "['PRSHDG', 'NTLBCS', 'URHCS', 'EXANEL', 'ANTVRL', 'CPZPCQP', 'THRMGT', 'STNFIN', 'SDCWA', 'BRAVR']\n",
       "There are 73688 unique company codes\n"
      ]
     }
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1513,16 +1513,170 @@
    "source": []
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 28,
    "metadata": {},
-   "source": []
+   "outputs": [],
+   "source": [
+    "df['Non-duplicates'] = [set(code) for code in df['company_codes'].str.split(\",\")]"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df['Non-duplicates'] = [list(code) for code in df['Non-duplicates']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['Non-duplicates'] = [','.join(code) for code in df['Non-duplicates']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['Non-duplicates'] = df['Non-duplicates'].str[1:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>company_codes</th>\n",
+       "      <th>Non-duplicates</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>,toamsi,toamsi,tosmsc,tosmsc,tshba,tshba,tshba,</td>\n",
+       "      <td>tshba,toamsi,tosmsc</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>,irevs,irevs,irevs,</td>\n",
+       "      <td>irevs</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>,euruno,</td>\n",
+       "      <td>euruno</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>,retrac,nyse,nyse,retrac,retrac,seexc,</td>\n",
+       "      <td>nyse,retrac,seexc</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>,brstmy,brstmy,brstmy,</td>\n",
+       "      <td>brstmy</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1942850</th>\n",
+       "      <td>,egalcu,egalcu,egalcu,seexc,</td>\n",
+       "      <td>seexc,egalcu</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1942851</th>\n",
+       "      <td>,endoph,schplo,endoph,endoph,jnsspi,jnsspi,jon...</td>\n",
+       "      <td>schplo,endoph,jnsspi,seexc,jonjon</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1942852</th>\n",
+       "      <td>,amchso,</td>\n",
+       "      <td>amchso</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1942853</th>\n",
+       "      <td>,grnlft,kalamc,stry,stry,stry,</td>\n",
+       "      <td>grnlft,stry,kalamc</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1942854</th>\n",
+       "      <td>,zogeni,ardgm,cowhrp,zogeni,zogeni,endoph,</td>\n",
+       "      <td>zogeni,endoph,cowhrp,ardgm</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1942855 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                             company_codes  \\\n",
+       "0          ,toamsi,toamsi,tosmsc,tosmsc,tshba,tshba,tshba,   \n",
+       "1                                      ,irevs,irevs,irevs,   \n",
+       "2                                                 ,euruno,   \n",
+       "3                   ,retrac,nyse,nyse,retrac,retrac,seexc,   \n",
+       "4                                   ,brstmy,brstmy,brstmy,   \n",
+       "...                                                    ...   \n",
+       "1942850                       ,egalcu,egalcu,egalcu,seexc,   \n",
+       "1942851  ,endoph,schplo,endoph,endoph,jnsspi,jnsspi,jon...   \n",
+       "1942852                                           ,amchso,   \n",
+       "1942853                     ,grnlft,kalamc,stry,stry,stry,   \n",
+       "1942854         ,zogeni,ardgm,cowhrp,zogeni,zogeni,endoph,   \n",
+       "\n",
+       "                            Non-duplicates  \n",
+       "0                      tshba,toamsi,tosmsc  \n",
+       "1                                    irevs  \n",
+       "2                                   euruno  \n",
+       "3                        nyse,retrac,seexc  \n",
+       "4                                   brstmy  \n",
+       "...                                    ...  \n",
+       "1942850                       seexc,egalcu  \n",
+       "1942851  schplo,endoph,jnsspi,seexc,jonjon  \n",
+       "1942852                             amchso  \n",
+       "1942853                 grnlft,stry,kalamc  \n",
+       "1942854         zogeni,endoph,cowhrp,ardgm  \n",
+       "\n",
+       "[1942855 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[['company_codes', 'Non-duplicates']]"
+   ]
   },
   {
    "cell_type": "code",
